--- a/app/src/main/res/layout/activity_feedback.xml
+++ b/app/src/main/res/layout/activity_feedback.xml
@@ -8,42 +8,15 @@
 
     <include layout="@layout/layout_action_title_mine" />
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dp_30"
-        android:background="@drawable/edit_bg"
-        android:gravity="center_vertical"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/tv_email"
-            style="@style/edit_forward_text"
-            android:text="@string/email" />
-
-        <EditText
-            android:id="@+id/et_email"
-            style="@style/common_edittext"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="@dimen/dp_10"
-            android:maxLength="30"
-            android:layout_toRightOf="@+id/tv_email"
-            android:hint="@string/hint_email"
-            android:singleLine="true" />
-    </RelativeLayout>
-
-
     <EditText
         android:id="@+id/et_content"
         style="@style/common_edittext"
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_150"
         android:layout_marginTop="@dimen/dp_30"
-        android:maxLength="140"
         android:background="@drawable/edit_bg"
-        android:hint="@string/hint_feedback" />
+        android:hint="@string/hint_feedback"
+        android:maxLength="140" />
 
     <Button
         android:id="@+id/btn_commit"
