--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,6 +8,14 @@
     android:orientation="vertical">
 
     <ImageView
+        android:id="@+id/btn_back"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/dp_15"
+        android:padding="@dimen/dp_10"
+        android:src="@mipmap/back_gray" />
+
+    <ImageView
         android:id="@+id/img_header"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -50,9 +58,9 @@
                 android:background="@null"
                 android:drawablePadding="@dimen/dp_5"
                 android:hint="@string/hint_username"
-                android:padding="@dimen/dp_10"
                 android:inputType="phone"
                 android:maxLength="11"
+                android:padding="@dimen/dp_10"
                 android:singleLine="true"
                 android:textColorHint="@color/gray_hint"
                 android:textCursorDrawable="@drawable/color_cursor"
@@ -94,45 +102,13 @@
                 android:layout_weight="1"
                 android:background="@null"
                 android:drawablePadding="@dimen/dp_5"
-                android:maxLength="16"
                 android:hint="@string/hint_pwd"
                 android:inputType="textPassword"
+                android:maxLength="16"
                 android:padding="@dimen/dp_10"
                 android:singleLine="true"
                 android:textColorHint="@color/gray_hint"
                 android:textCursorDrawable="@drawable/color_cursor"
-                android:textSize="@dimen/comment_textSize" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/ll_verify_code"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/ll_password"
-            android:background="@color/white"
-            android:orientation="horizontal"
-            android:visibility="gone">
-
-            <TextView
-                android:layout_width="@dimen/dp_60"
-                android:layout_height="wrap_content"
-                android:text="@string/code"
-                android:textColor="@color/black"
-                android:textSize="@dimen/comment_textSize" />
-
-            <EditText
-                android:id="@+id/et_code"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:background="@null"
-                android:drawablePadding="@dimen/dp_5"
-                android:hint="@string/hint_code"
-                android:inputType="number"
-                android:padding="@dimen/dp_10"
-                android:singleLine="true"
-                android:textColorHint="@color/gray"
                 android:textSize="@dimen/comment_textSize" />
 
         </LinearLayout>
