--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,15 +7,19 @@
     android:gravity="center_horizontal"
     android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/btn_back"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/dp_15"
-        android:padding="@dimen/dp_10"
-        android:src="@mipmap/back_gray" />
+    <!--<ImageView-->
+        <!--android:id="@+id/btn_back"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_margin="@dimen/dp_15"-->
+        <!--android:padding="@dimen/dp_10"-->
+        <!--android:src="@mipmap/back_gray" />-->
+    <include
+        android:id="@+id/header"
+        layout="@layout/layout_action_title_mine_black"/>
 
     <ImageView
+        android:layout_below="@+id/header"
         android:id="@+id/img_header"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -72,11 +76,11 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:layout_marginRight="@dimen/dp_10"
-                android:background="@drawable/shape_cancel"
+                android:background="@color/transparent"
                 android:padding="@dimen/dp_5"
                 android:scaleType="centerCrop"
                 android:src="@mipmap/cancel"
-                android:visibility="gone" />
+                android:visibility="visible" />
 
         </LinearLayout>
 
